--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,13 @@
 	  	<version.commons-lang>2.6</version.commons-lang>
 	  	<version.commons-beanutils>1.9.3</version.commons-beanutils>
 	  	<version.commons-codec>1.11</version.commons-codec>
-	  	<version.commons-fileupload>[1.3.3,)</version.commons-fileupload>
+	  	<version.commons-fileupload>1.4</version.commons-fileupload>
 	  	<version.commons-io>2.6</version.commons-io>
 	  	<version.fastjson>1.2.47</version.fastjson>
 	  	<version.com.caucho.hessian>4.0.38</version.com.caucho.hessian>
 	  	<version.com.esotericsoftware.kryo>4.0.1</version.com.esotericsoftware.kryo>
-	  	<version.io.undertow.undertow-core>[2.0.23,)</version.io.undertow.undertow-core>
-	  	<version.spring>4.3.22</version.spring>
+	  	<version.io.undertow.undertow-core>2.0.23.Final</version.io.undertow.undertow-core>
+	  	<version.spring>4.3.22.RELEASE</version.spring>
 	  	<version.netty.netty-all>4.1.12.Final</version.netty.netty-all>
 	  	<version.org.xerial.snappy.snappy-java>1.0.5</version.org.xerial.snappy.snappy-java>
 	  	<version.easymock>3.0</version.easymock>
